hphp/hack/test/typecheck/reactive/mutability_flavors2_1.php.exp
File "mutability_flavors2_1.php", line 15, characters 5-6:
Variable `$a` is undefined, not always defined, or unset afterwards. (Naming[2050])
File "mutability_flavors2_1.php", line 13, characters 3-22:
Did you mean `$b` instead?
File "mutability_flavors2_1.php", line 15, characters 5-6:
Invalid argument (Typing[4260])
File "mutability_flavors2_1.php", line 6, characters 14-15:
This parameter is not marked as mutable
File "mutability_flavors2_1.php", line 15, characters 5-6:
But this expression is mutable
